namespace Living.Enemies.WarriorBoss
{
	public static class WarriorBossTrigger
	{
		public static string HeavyAttack => "HEAVY_ATTACK";
		public static string DoubleAttack => "DOUBLE_ATTACK";
		public static string Annoyed => "ANNOYED";
		public static string Death => "DEATH";
		public static string FirstStage => "FIRST_STAGE";
		public static string SecondStage => "SECOND_STAGE";
	}
}